refactor: HTTP 요청을 InputStream Byte 기반으로 읽어서 파싱하도록 수정
이미지 이진 데이터도 읽을 수 있도록 하기 위함
BufferedReader 문자열 스트림으로 읽을 경우 Content-Length와 실제로 읽은 Length가 다름. 즉, byte가 깨짐